--- a/ext/bg/info.html
+++ b/ext/bg/info.html
@@ -65,6 +65,7 @@
 
 <script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
+<script src="/bg/js/permissions-util.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
 <script src="/bg/js/settings/backup-controller.js"></script>
 
