--- a/ext/bg/permissions.html
+++ b/ext/bg/permissions.html
@@ -168,7 +168,7 @@
 
 <script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
-
+<script src="/bg/js/permissions-util.js"></script>
 <script src="/bg/js/settings/permissions-toggle-controller.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
 
