--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -336,6 +336,7 @@
 <script src="/bg/js/dictionary-importer.js"></script>
 <script src="/bg/js/json-schema.js"></script>
 <script src="/bg/js/media-utility.js"></script>
+<script src="/bg/js/permissions-util.js"></script>
 
 <script src="/bg/js/settings/dictionary-controller.js"></script>
 <script src="/bg/js/settings/dictionary-import-controller.js"></script>
