--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -109,7 +109,7 @@
 
 <script src="/bg/js/query-parser.js"></script>
 <script src="/bg/js/clipboard-monitor.js"></script>
-<script src="/bg/js/search.js"></script>
+<script src="/bg/js/search-display-controller.js"></script>
 
 <script src="/bg/js/search-main.js"></script>
 
