Update the warning on the old settings page (#1370)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -21,10 +21,10 @@
                 <h1>Yomichan Options</h1>
             </div>
 
-            <div class="alert alert-warning">
-                This is the old version of the settings page, which is currently deprecated and does not include all options.
-                Please use <a href="/bg/settings2.html">the new settings page</a>,
-                and if you have any feedback, feel free to share
+            <div class="alert alert-danger">
+                This is the old version of the settings page, it will be removed in the next version.
+                Please use <a href="/bg/settings2.html">the new settings page</a>
+                and feel free to share any feedback
                 <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
             </div>
 
