--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Yomichan Options (Old)</title>
-        <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
-        <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
-        <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/mixed/img/icon38.png" sizes="38x38">
-        <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
-        <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
-        <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
+        <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
+        <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
+        <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
+        <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="/bg/css/settings.css">
@@ -702,7 +702,7 @@
 
             <div class="ignore-form-changes">
                 <div>
-                    <img src="/mixed/img/spinner.gif" class="pull-right" id="dictionary-spinner" alt="" hidden>
+                    <img src="/images/spinner.gif" class="pull-right" id="dictionary-spinner" alt="" hidden>
                     <h3>Dictionaries</h3>
                 </div>
 
@@ -908,7 +908,7 @@
 
             <div>
                 <div>
-                    <img src="/mixed/img/spinner.gif" class="pull-right" id="anki-spinner" alt="" hidden>
+                    <img src="/images/spinner.gif" class="pull-right" id="anki-spinner" alt="" hidden>
                     <h3>Anki Options</h3>
                 </div>
 
@@ -1264,7 +1264,7 @@
                     countless hours that I have devoted to this extension.
                 </p>
                 <p>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4DBTN9A3CUAFN" target="_blank" rel="noopener"><img src="/bg/img/paypal.gif" alt=""></a>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4DBTN9A3CUAFN" target="_blank" rel="noopener"><img src="/images/paypal.gif" alt=""></a>
                 </p>
             </div>
 
