--- a/ext/bg/template-renderer.html
+++ b/ext/bg/template-renderer.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yomichan Handlebars Sandbox</title>
-    <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
-    <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/mixed/img/icon38.png" sizes="38x38">
-    <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
+    <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
+    <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
 </head>
 <body>
     <script src="/mixed/lib/handlebars.min.js"></script>
