Move css files (#1374)
* Move bg/css/ to css/

* Move mixed/css/ to css/

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -11,9 +11,9 @@
     <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
-    <link rel="stylesheet" type="text/css" href="/mixed/css/material.css">
-    <link rel="stylesheet" type="text/css" href="/mixed/css/display.css">
-    <link rel="stylesheet" type="text/css" href="/mixed/css/search.css">
+    <link rel="stylesheet" type="text/css" href="/css/material.css">
+    <link rel="stylesheet" type="text/css" href="/css/display.css">
+    <link rel="stylesheet" type="text/css" href="/css/search.css">
 </head>
 <body>
 
