--- a/ext/bg/info.html
+++ b/ext/bg/info.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
-    <link rel="stylesheet" type="text/css" href="/mixed/css/material.css">
-    <link rel="stylesheet" type="text/css" href="/bg/css/settings2.css">
+    <link rel="stylesheet" type="text/css" href="/css/material.css">
+    <link rel="stylesheet" type="text/css" href="/css/settings2.css">
 </head>
 <body>
 
