Move html files (#1375)
* Move background.html to /

* Move context.html to /

* Move info.html to /

* Move legal.html to /

* Move permissions.html to /

* Move pitch-accents-preview.html to /

* Move popup-preview.html to /

* Move search.html to /

* Move settings.html to /

* Move settings2.html to /

* Move template-renderer.html to /

* Move welcome.html to /

* Move float.html to /

* Move display-templates.html to /

--- a/ext/settings-old.html
+++ b/ext/settings-old.html
@@ -23,7 +23,7 @@
 
             <div class="alert alert-danger">
                 This is the old version of the settings page, it will be removed in the next version.
-                Please use <a href="/bg/settings2.html">the new settings page</a>
+                Please use <a href="/settings.html">the new settings page</a>
                 and feel free to share any feedback
                 <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
             </div>
@@ -212,7 +212,7 @@
                 </div>
 
                 <div class="checkbox options-advanced">
-                    <label><input type="checkbox" data-setting="global.useSettingsV2" data-scope="global"> Use the <a href="/bg/settings2.html">v2 settings page</a> by default</label>
+                    <label><input type="checkbox" data-setting="global.useSettingsV2" data-scope="global"> Use the <a href="/settings.html">v2 settings page</a> by default</label>
                 </div>
 
                 <div class="form-group">
@@ -1269,7 +1269,7 @@
             </div>
 
             <div class="pull-right bottom-links">
-                <small><span id="extension-info"></span> &bull; <a href="search.html">Search</a> &bull; <a href="https://foosoft.net/projects/yomichan/" target="_blank" rel="noopener">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
+                <small><span id="extension-info"></span> &bull; <a href="/search.html">Search</a> &bull; <a href="https://foosoft.net/projects/yomichan/" target="_blank" rel="noopener">Homepage</a> &bull; <a href="/legal.html">Legal</a></small>
             </div>
         </div>
 
