--- a/ext/settings.html
+++ b/ext/settings.html
@@ -49,7 +49,7 @@
                     }'
                 ><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </span><span class="outline-item-label">Advanced</span></label>
-            <a href="/bg/info.html" class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="question-mark"></span></span><span class="outline-item-label">About Yomichan</span></a>
+            <a href="/info.html" class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="question-mark"></span></span><span class="outline-item-label">About Yomichan</span></a>
         </div>
     </div></div>
 </div>
@@ -67,7 +67,7 @@
                 <div class="settings-item-label">
                     <strong>Notice:</strong>
                     This settings page is planned to replace
-                    <a href="/bg/settings.html">the old settings page</a>.<br>
+                    <a href="/settings-old.html">the old settings page</a>.<br>
                     Questions, comments, and other feedback is welcome and can be shared
                     <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
                 </div>
@@ -214,7 +214,7 @@
         </div></div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Show the <a href="welcome.html" target="_blank" rel="noopener">welcome guide</a> on browser startup</div>
+                <div class="settings-item-label">Show the <a href="/welcome.html" target="_blank" rel="noopener">welcome guide</a> on browser startup</div>
             </div>
             <div class="settings-item-right">
                 <label class="toggle"><input type="checkbox" data-setting="general.showGuide"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
@@ -726,7 +726,7 @@
                     Pitch accents for terms and expressions can be shown if a dictionary supporting pitch accents is installed.
                     There are currently three different ways that pitch accents can be presented:
                 </p>
-                <iframe data-src="/bg/pitch-accents-preview.html" id="pitch-accents-preview-frame" class="defer-load-iframe" data-parent-distance="1"></iframe>
+                <iframe data-src="/pitch-accents-preview.html" id="pitch-accents-preview-frame" class="defer-load-iframe" data-parent-distance="1"></iframe>
                 <p>
                     <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
                 </p>
@@ -1769,7 +1769,7 @@
 <div class="content-right">
     <div class="preview-sidebar"><div class="preview-sidebar-inner">
         <div class="preview-frame-container">
-            <iframe src="/bg/popup-preview.html" class="preview-frame" id="popup-preview-frame"></iframe>
+            <iframe src="/popup-preview.html" class="preview-frame" id="popup-preview-frame"></iframe>
         </div>
     </div></div>
 </div>
