--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -32,15 +32,15 @@
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/images/cog.svg" class="inline-icon" alt=""> <em>cog</em> button will open the <a href="settings2.html" target="_blank" rel="noopener">Settings</a> page.
+                    The <img src="/images/cog.svg" class="inline-icon" alt=""> <em>cog</em> button will open the <a href="/settings.html" target="_blank" rel="noopener">Settings</a> page.
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/images/magnifying-glass.svg" class="inline-icon" alt=""> <em>magnifying glass</em> button will open the <a href="/bg/search.html" target="_blank" rel="noopener">Search</a> page,
+                    The <img src="/images/magnifying-glass.svg" class="inline-icon" alt=""> <em>magnifying glass</em> button will open the <a href="/search.html" target="_blank" rel="noopener">Search</a> page,
                     enabling text and terms to be looked up using the installed dictionaries.
                     This can even be used in offline mode!
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    The <img src="/images/question-mark-circle.svg" class="inline-icon" alt=""> <em>question mark</em> button will open the <a href="/bg/info.html" target="_blank" rel="noopener">Information</a> page,
+                    The <img src="/images/question-mark-circle.svg" class="inline-icon" alt=""> <em>question mark</em> button will open the <a href="/info.html" target="_blank" rel="noopener">Information</a> page,
                     which has some helpful information and links about Yomichan.
                 </div></div></div></div>
             </div>
@@ -51,7 +51,7 @@
                 Several downloadable dictionaries can be found on the <a href="https://foosoft.net/projects/yomichan/#dictionaries" target="_blank" rel="noopener noreferrer">Yomichan homepage</a>,
                 allowing you to choose the dictionaries most relevant for you.
                 Dictionaries can be configured using the button below,
-                or later from the the <a href="settings2.html" rel="noopener">Settings</a> page.
+                or later from the the <a href="/settings.html" rel="noopener">Settings</a> page.
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
                 <div class="settings-item settings-item-button" data-modal-action="show,dictionaries"><div class="settings-item-inner">
@@ -82,7 +82,7 @@
         </div>
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                This startup notification can be turned off using the options below, or later from the <a href="settings2.html" rel="noopener">Settings</a> page.
+                This startup notification can be turned off using the options below, or later from the <a href="/settings.html" rel="noopener">Settings</a> page.
             </div></div></div>
         </div>
     </div>
@@ -165,7 +165,7 @@
                 </select>
             </div>
         </div></div>
-        <a href="settings2.html" rel="noopener" class="settings-item settings-item-button"><div class="settings-item-inner">
+        <a href="/settings.html" rel="noopener" class="settings-item settings-item-button"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">More customization options are available on the Settings page</div>
             </div>
@@ -234,7 +234,7 @@
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">
-                    More dictionary settings are available on the <a href="settings2.html" rel="noopener">Settings</a> page
+                    More dictionary settings are available on the <a href="/settings.html" rel="noopener">Settings</a> page
                 </div>
             </div>
         </div></div>
