Move mixed/lib/ to lib/ (#1382)

--- a/ext/background.html
+++ b/ext/background.html
@@ -15,7 +15,7 @@
     <body>
         <textarea id="clipboard-paste-target"></textarea>
 
-        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/lib/wanakana.min.js"></script>
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/yomichan.js"></script>
