--- a/ext/search.html
+++ b/ext/search.html
@@ -73,7 +73,7 @@
 <div id="popup-menus"></div>
 
 <!-- Scripts -->
-<script src="/mixed/lib/wanakana.min.js"></script>
+<script src="/lib/wanakana.min.js"></script>
 
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
