--- a/ext/settings-old.html
+++ b/ext/settings-old.html
@@ -11,8 +11,8 @@
         <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
         <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
         <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="/css/settings.css">
     </head>
     <body>
@@ -1273,10 +1273,10 @@
             </div>
         </div>
 
-        <script src="/mixed/lib/jquery.min.js"></script>
-        <script src="/mixed/lib/bootstrap/js/bootstrap.min.js"></script>
-        <script src="/mixed/lib/jszip.min.js"></script>
-        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/lib/jquery.min.js"></script>
+        <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/lib/jszip.min.js"></script>
+        <script src="/lib/wanakana.min.js"></script>
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/yomichan.js"></script>
