--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
 </head>
 <body>
-    <script src="/mixed/lib/handlebars.min.js"></script>
+    <script src="/lib/handlebars.min.js"></script>
     <script src="/mixed/js/dictionary-data-util.js"></script>
     <script src="/mixed/js/japanese.js"></script>
     <script src="/bg/js/anki-note-data.js"></script>
