--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -312,7 +312,7 @@
 
 
 <!-- Scripts -->
-<script src="/mixed/lib/jszip.min.js"></script>
+<script src="/lib/jszip.min.js"></script>
 
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
