--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -34,7 +34,7 @@
     </div></div>
 </div></div>
 
-<script src="/mixed/lib/wanakana.min.js"></script>
+<script src="/lib/wanakana.min.js"></script>
 
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
