--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3186,8 +3186,8 @@
 
 
 <!-- Scripts -->
-<script src="/mixed/lib/jszip.min.js"></script>
-<script src="/mixed/lib/wanakana.min.js"></script>
+<script src="/lib/jszip.min.js"></script>
+<script src="/lib/wanakana.min.js"></script>
 
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
