--- a/ext/info.html
+++ b/ext/info.html
@@ -58,13 +58,13 @@
 </div></div>
 
 <!-- Scripts -->
-<script src="/mixed/js/core.js"></script>
-<script src="/mixed/js/yomichan.js"></script>
-<script src="/mixed/js/comm.js"></script>
-<script src="/mixed/js/api.js"></script>
+<script src="/js/core.js"></script>
+<script src="/js/yomichan.js"></script>
+<script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/comm/api.js"></script>
 
-<script src="/mixed/js/document-focus-controller.js"></script>
-<script src="/mixed/js/html-template-collection.js"></script>
+<script src="/js/dom/document-focus-controller.js"></script>
+<script src="/js/dom/html-template-collection.js"></script>
 <script src="/bg/js/permissions-util.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
 <script src="/bg/js/settings/backup-controller.js"></script>
