--- a/ext/popup.html
+++ b/ext/popup.html
@@ -89,37 +89,37 @@
 <div id="popup-menus"></div>
 
 <!-- Scripts -->
-<script src="/mixed/js/core.js"></script>
-<script src="/mixed/js/yomichan.js"></script>
-<script src="/mixed/js/comm.js"></script>
-<script src="/mixed/js/api.js"></script>
-<script src="/mixed/js/japanese.js"></script>
+<script src="/js/core.js"></script>
+<script src="/js/yomichan.js"></script>
+<script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/comm/api.js"></script>
+<script src="/js/language/japanese-util.js"></script>
 
-<script src="/mixed/js/document-util.js"></script>
+<script src="/js/dom/document-util.js"></script>
 <script src="/fg/js/dom-text-scanner.js"></script>
 <script src="/fg/js/text-source-range.js"></script>
 <script src="/fg/js/text-source-element.js"></script>
-<script src="/mixed/js/audio-system.js"></script>
-<script src="/mixed/js/dictionary-data-util.js"></script>
-<script src="/mixed/js/display.js"></script>
-<script src="/mixed/js/display-audio.js"></script>
-<script src="/mixed/js/display-generator.js"></script>
-<script src="/mixed/js/display-history.js"></script>
-<script src="/mixed/js/display-notification.js"></script>
-<script src="/mixed/js/display-profile-selection.js"></script>
-<script src="/mixed/js/document-focus-controller.js"></script>
-<script src="/mixed/js/dynamic-loader.js"></script>
-<script src="/mixed/js/frame-endpoint.js"></script>
-<script src="/mixed/js/hotkey-handler.js"></script>
-<script src="/mixed/js/hotkey-help-controller.js"></script>
-<script src="/mixed/js/hotkey-util.js"></script>
-<script src="/mixed/js/media-loader.js"></script>
-<script src="/mixed/js/panel-element.js"></script>
-<script src="/mixed/js/popup-menu.js"></script>
-<script src="/mixed/js/scroll.js"></script>
-<script src="/mixed/js/text-scanner.js"></script>
-<script src="/mixed/js/html-template-collection.js"></script>
-<script src="/mixed/js/text-to-speech-audio.js"></script>
+<script src="/js/media/audio-system.js"></script>
+<script src="/js/language/dictionary-data-util.js"></script>
+<script src="/js/display/display.js"></script>
+<script src="/js/display/display-audio.js"></script>
+<script src="/js/display/display-generator.js"></script>
+<script src="/js/display/display-history.js"></script>
+<script src="/js/display/display-notification.js"></script>
+<script src="/js/display/display-profile-selection.js"></script>
+<script src="/js/dom/document-focus-controller.js"></script>
+<script src="/js/script/dynamic-loader.js"></script>
+<script src="/js/comm/frame-endpoint.js"></script>
+<script src="/js/input/hotkey-handler.js"></script>
+<script src="/js/input/hotkey-help-controller.js"></script>
+<script src="/js/input/hotkey-util.js"></script>
+<script src="/js/media/media-loader.js"></script>
+<script src="/js/dom/panel-element.js"></script>
+<script src="/js/dom/popup-menu.js"></script>
+<script src="/js/dom/window-scroll.js"></script>
+<script src="/js/language/text-scanner.js"></script>
+<script src="/js/dom/html-template-collection.js"></script>
+<script src="/js/media/text-to-speech-audio.js"></script>
 
 <script src="/bg/js/anki-note-builder.js"></script>
 <script src="/bg/js/template-renderer-proxy.js"></script>
