--- a/ext/background.html
+++ b/ext/background.html
@@ -17,14 +17,14 @@
 
         <script src="/lib/wanakana.min.js"></script>
 
-        <script src="/mixed/js/core.js"></script>
-        <script src="/mixed/js/yomichan.js"></script>
-        <script src="/mixed/js/environment.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
+        <script src="/js/core.js"></script>
+        <script src="/js/yomichan.js"></script>
+        <script src="/js/background/environment.js"></script>
+        <script src="/js/language/japanese-util.js"></script>
 
-        <script src="/mixed/js/cache-map.js"></script>
-        <script src="/mixed/js/dictionary-data-util.js"></script>
-        <script src="/mixed/js/object-property-accessor.js"></script>
+        <script src="/js/general/cache-map.js"></script>
+        <script src="/js/language/dictionary-data-util.js"></script>
+        <script src="/js/general/object-property-accessor.js"></script>
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/audio-downloader.js"></script>
