--- a/ext/pitch-accents-preview.html
+++ b/ext/pitch-accents-preview.html
@@ -49,13 +49,13 @@
 
 </div></div>
 
-<script src="/mixed/js/core.js"></script>
-<script src="/mixed/js/yomichan.js"></script>
-<script src="/mixed/js/comm.js"></script>
-<script src="/mixed/js/api.js"></script>
+<script src="/js/core.js"></script>
+<script src="/js/yomichan.js"></script>
+<script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/comm/api.js"></script>
 
-<script src="/mixed/js/display-generator.js"></script>
-<script src="/mixed/js/html-template-collection.js"></script>
+<script src="/js/display/display-generator.js"></script>
+<script src="/js/dom/html-template-collection.js"></script>
 
 <script src="/bg/js/settings/pitch-accents-preview-main.js"></script>
 
