--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -36,16 +36,16 @@
 
 <script src="/lib/wanakana.min.js"></script>
 
-<script src="/mixed/js/core.js"></script>
-<script src="/mixed/js/yomichan.js"></script>
-<script src="/mixed/js/comm.js"></script>
-<script src="/mixed/js/api.js"></script>
-<script src="/mixed/js/dynamic-loader.js"></script>
-<script src="/mixed/js/frame-client.js"></script>
-<script src="/mixed/js/text-scanner.js"></script>
+<script src="/js/core.js"></script>
+<script src="/js/yomichan.js"></script>
+<script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/comm/api.js"></script>
+<script src="/js/script/dynamic-loader.js"></script>
+<script src="/js/comm/frame-client.js"></script>
+<script src="/js/language/text-scanner.js"></script>
 
-<script src="/mixed/js/document-util.js"></script>
-<script src="/mixed/js/hotkey-handler.js"></script>
+<script src="/js/dom/document-util.js"></script>
+<script src="/js/input/hotkey-handler.js"></script>
 <script src="/fg/js/dom-text-scanner.js"></script>
 <script src="/fg/js/popup.js"></script>
 <script src="/fg/js/text-source-range.js"></script>
