--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3189,27 +3189,27 @@
 <script src="/lib/jszip.min.js"></script>
 <script src="/lib/wanakana.min.js"></script>
 
-<script src="/mixed/js/core.js"></script>
-<script src="/mixed/js/yomichan.js"></script>
-<script src="/mixed/js/comm.js"></script>
-<script src="/mixed/js/environment.js"></script>
-<script src="/mixed/js/api.js"></script>
-<script src="/mixed/js/japanese.js"></script>
+<script src="/js/core.js"></script>
+<script src="/js/yomichan.js"></script>
+<script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/background/environment.js"></script>
+<script src="/js/comm/api.js"></script>
+<script src="/js/language/japanese-util.js"></script>
 
-<script src="/mixed/js/audio-system.js"></script>
-<script src="/mixed/js/cache-map.js"></script>
-<script src="/mixed/js/dictionary-data-util.js"></script>
-<script src="/mixed/js/document-focus-controller.js"></script>
-<script src="/mixed/js/document-util.js"></script>
-<script src="/mixed/js/dom-data-binder.js"></script>
-<script src="/mixed/js/hotkey-util.js"></script>
-<script src="/mixed/js/html-template-collection.js"></script>
-<script src="/mixed/js/object-property-accessor.js"></script>
-<script src="/mixed/js/panel-element.js"></script>
-<script src="/mixed/js/popup-menu.js"></script>
-<script src="/mixed/js/selector-observer.js"></script>
-<script src="/mixed/js/task-accumulator.js"></script>
-<script src="/mixed/js/text-to-speech-audio.js"></script>
+<script src="/js/media/audio-system.js"></script>
+<script src="/js/general/cache-map.js"></script>
+<script src="/js/language/dictionary-data-util.js"></script>
+<script src="/js/dom/document-focus-controller.js"></script>
+<script src="/js/dom/document-util.js"></script>
+<script src="/js/dom/dom-data-binder.js"></script>
+<script src="/js/input/hotkey-util.js"></script>
+<script src="/js/dom/html-template-collection.js"></script>
+<script src="/js/general/object-property-accessor.js"></script>
+<script src="/js/dom/panel-element.js"></script>
+<script src="/js/dom/popup-menu.js"></script>
+<script src="/js/dom/selector-observer.js"></script>
+<script src="/js/general/task-accumulator.js"></script>
+<script src="/js/media/text-to-speech-audio.js"></script>
 
 <script src="/bg/js/anki.js"></script>
 <script src="/bg/js/anki-note-builder.js"></script>
