--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -46,14 +46,14 @@
 
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/input/hotkey-handler.js"></script>
-<script src="/fg/js/dom-text-scanner.js"></script>
-<script src="/fg/js/popup.js"></script>
-<script src="/fg/js/text-source-range.js"></script>
-<script src="/fg/js/text-source-element.js"></script>
-<script src="/fg/js/popup-factory.js"></script>
-<script src="/fg/js/frontend.js"></script>
-<script src="/fg/js/frame-ancestry-handler.js"></script>
-<script src="/fg/js/frame-offset-forwarder.js"></script>
+<script src="/js/dom/dom-text-scanner.js"></script>
+<script src="/js/app/popup.js"></script>
+<script src="/js/dom/text-source-range.js"></script>
+<script src="/js/dom/text-source-element.js"></script>
+<script src="/js/app/popup-factory.js"></script>
+<script src="/js/app/frontend.js"></script>
+<script src="/js/comm/frame-ancestry-handler.js"></script>
+<script src="/js/comm/frame-offset-forwarder.js"></script>
 <script src="/bg/js/settings/popup-preview-frame.js"></script>
 
 <script src="/bg/js/settings/popup-preview-frame-main.js"></script>
