--- a/ext/popup.html
+++ b/ext/popup.html
@@ -96,9 +96,9 @@
 <script src="/js/language/japanese-util.js"></script>
 
 <script src="/js/dom/document-util.js"></script>
-<script src="/fg/js/dom-text-scanner.js"></script>
-<script src="/fg/js/text-source-range.js"></script>
-<script src="/fg/js/text-source-element.js"></script>
+<script src="/js/dom/dom-text-scanner.js"></script>
+<script src="/js/dom/text-source-range.js"></script>
+<script src="/js/dom/text-source-element.js"></script>
 <script src="/js/media/audio-system.js"></script>
 <script src="/js/language/dictionary-data-util.js"></script>
 <script src="/js/display/display.js"></script>
@@ -126,7 +126,7 @@
 
 <script src="/bg/js/query-parser.js"></script>
 
-<script src="/fg/js/float-main.js"></script>
+<script src="/js/display/popup-main.js"></script>
 
 </body>
 </html>
