Move bg/js/settings(2) (#1385)
* Move bg/js/settings/ to js/settings/

* Move bg/js/settings2/ to js/settings/

--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -338,16 +338,16 @@
 <script src="/bg/js/media-utility.js"></script>
 <script src="/bg/js/permissions-util.js"></script>
 
-<script src="/bg/js/settings/dictionary-controller.js"></script>
-<script src="/bg/js/settings/dictionary-import-controller.js"></script>
-<script src="/bg/js/settings/generic-setting-controller.js"></script>
-<script src="/bg/js/settings/modal.js"></script>
-<script src="/bg/js/settings/modal-controller.js"></script>
-<script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
-<script src="/bg/js/settings/settings-controller.js"></script>
-<script src="/bg/js/settings/status-footer.js"></script>
+<script src="/js/settings/dictionary-controller.js"></script>
+<script src="/js/settings/dictionary-import-controller.js"></script>
+<script src="/js/settings/generic-setting-controller.js"></script>
+<script src="/js/settings/modal.js"></script>
+<script src="/js/settings/modal-controller.js"></script>
+<script src="/js/settings/scan-inputs-simple-controller.js"></script>
+<script src="/js/settings/settings-controller.js"></script>
+<script src="/js/settings/status-footer.js"></script>
 
-<script src="/bg/js/settings2/settings-display-controller.js"></script>
+<script src="/js/settings/settings-display-controller.js"></script>
 
 <script src="/bg/js/welcome-main.js"></script>
 
