--- a/ext/settings-old.html
+++ b/ext/settings-old.html
@@ -1309,26 +1309,26 @@
         <script src="/bg/js/template-patcher.js"></script>
         <script src="/bg/js/template-renderer-proxy.js"></script>
 
-        <script src="/bg/js/settings/keyboard-mouse-input-field.js"></script>
-        <script src="/bg/js/settings/modal-jquery.js"></script>
-        <script src="/bg/js/settings/profile-conditions-ui.js"></script>
+        <script src="/js/settings/keyboard-mouse-input-field.js"></script>
+        <script src="/js/settings/modal-jquery.js"></script>
+        <script src="/js/settings/profile-conditions-ui.js"></script>
 
-        <script src="/bg/js/settings/anki-controller.js"></script>
-        <script src="/bg/js/settings/anki-templates-controller.js"></script>
-        <script src="/bg/js/settings/audio-controller.js"></script>
-        <script src="/bg/js/settings/backup-controller.js"></script>
-        <script src="/bg/js/settings/permissions-toggle-controller.js"></script>
-        <script src="/bg/js/settings/dictionary-controller.js"></script>
-        <script src="/bg/js/settings/dictionary-import-controller.js"></script>
-        <script src="/bg/js/settings/generic-setting-controller.js"></script>
-        <script src="/bg/js/settings/modal-controller.js"></script>
-        <script src="/bg/js/settings/popup-preview-controller.js"></script>
-        <script src="/bg/js/settings/profile-controller.js"></script>
-        <script src="/bg/js/settings/scan-inputs-controller.js"></script>
-        <script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
-        <script src="/bg/js/settings/settings-controller.js"></script>
-        <script src="/bg/js/settings/storage-controller.js"></script>
+        <script src="/js/settings/anki-controller.js"></script>
+        <script src="/js/settings/anki-templates-controller.js"></script>
+        <script src="/js/settings/audio-controller.js"></script>
+        <script src="/js/settings/backup-controller.js"></script>
+        <script src="/js/settings/permissions-toggle-controller.js"></script>
+        <script src="/js/settings/dictionary-controller.js"></script>
+        <script src="/js/settings/dictionary-import-controller.js"></script>
+        <script src="/js/settings/generic-setting-controller.js"></script>
+        <script src="/js/settings/modal-controller.js"></script>
+        <script src="/js/settings/popup-preview-controller.js"></script>
+        <script src="/js/settings/profile-controller.js"></script>
+        <script src="/js/settings/scan-inputs-controller.js"></script>
+        <script src="/js/settings/scan-inputs-simple-controller.js"></script>
+        <script src="/js/settings/settings-controller.js"></script>
+        <script src="/js/settings/storage-controller.js"></script>
 
-        <script src="/bg/js/settings/main.js"></script>
+        <script src="/js/settings/main.js"></script>
     </body>
 </html>
