--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3223,38 +3223,38 @@
 <script src="/bg/js/template-patcher.js"></script>
 <script src="/bg/js/template-renderer-proxy.js"></script>
 
-<script src="/bg/js/settings/keyboard-mouse-input-field.js"></script>
-<script src="/bg/js/settings/profile-conditions-ui.js"></script>
+<script src="/js/settings/keyboard-mouse-input-field.js"></script>
+<script src="/js/settings/profile-conditions-ui.js"></script>
 
-<script src="/bg/js/settings/anki-controller.js"></script>
-<script src="/bg/js/settings/anki-templates-controller.js"></script>
-<script src="/bg/js/settings/audio-controller.js"></script>
-<script src="/bg/js/settings/backup-controller.js"></script>
-<script src="/bg/js/settings/permissions-toggle-controller.js"></script>
-<script src="/bg/js/settings/dictionary-controller.js"></script>
-<script src="/bg/js/settings/dictionary-import-controller.js"></script>
-<script src="/bg/js/settings/generic-setting-controller.js"></script>
-<script src="/bg/js/settings/modal.js"></script>
-<script src="/bg/js/settings/modal-controller.js"></script>
-<script src="/bg/js/settings/popup-preview-controller.js"></script>
-<script src="/bg/js/settings/profile-controller.js"></script>
-<script src="/bg/js/settings/scan-inputs-controller.js"></script>
-<script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
-<script src="/bg/js/settings/settings-controller.js"></script>
-<script src="/bg/js/settings/status-footer.js"></script>
-<script src="/bg/js/settings/storage-controller.js"></script>
+<script src="/js/settings/anki-controller.js"></script>
+<script src="/js/settings/anki-templates-controller.js"></script>
+<script src="/js/settings/audio-controller.js"></script>
+<script src="/js/settings/backup-controller.js"></script>
+<script src="/js/settings/permissions-toggle-controller.js"></script>
+<script src="/js/settings/dictionary-controller.js"></script>
+<script src="/js/settings/dictionary-import-controller.js"></script>
+<script src="/js/settings/generic-setting-controller.js"></script>
+<script src="/js/settings/modal.js"></script>
+<script src="/js/settings/modal-controller.js"></script>
+<script src="/js/settings/popup-preview-controller.js"></script>
+<script src="/js/settings/profile-controller.js"></script>
+<script src="/js/settings/scan-inputs-controller.js"></script>
+<script src="/js/settings/scan-inputs-simple-controller.js"></script>
+<script src="/js/settings/settings-controller.js"></script>
+<script src="/js/settings/status-footer.js"></script>
+<script src="/js/settings/storage-controller.js"></script>
 
-<script src="/bg/js/settings2/extension-keyboard-shortcuts-controller.js"></script>
-<script src="/bg/js/settings2/keyboard-shortcuts-controller.js"></script>
-<script src="/bg/js/settings2/mecab-controller.js"></script>
-<script src="/bg/js/settings2/nested-popups-controller.js"></script>
-<script src="/bg/js/settings2/popup-window-controller.js"></script>
-<script src="/bg/js/settings2/secondary-search-dictionary-controller.js"></script>
-<script src="/bg/js/settings2/sentence-termination-characters-controller.js"></script>
-<script src="/bg/js/settings2/settings-display-controller.js"></script>
-<script src="/bg/js/settings2/translation-text-replacements-controller.js"></script>
+<script src="/js/settings/extension-keyboard-shortcuts-controller.js"></script>
+<script src="/js/settings/keyboard-shortcuts-controller.js"></script>
+<script src="/js/settings/mecab-controller.js"></script>
+<script src="/js/settings/nested-popups-controller.js"></script>
+<script src="/js/settings/popup-window-controller.js"></script>
+<script src="/js/settings/secondary-search-dictionary-controller.js"></script>
+<script src="/js/settings/sentence-termination-characters-controller.js"></script>
+<script src="/js/settings/settings-display-controller.js"></script>
+<script src="/js/settings/translation-text-replacements-controller.js"></script>
 
-<script src="/bg/js/settings2/settings-main.js"></script>
+<script src="/js/settings/settings-main.js"></script>
 
 </body>
 </html>
